--- a/index.html
+++ b/index.html
@@ -28,8 +28,27 @@
 					<li class="navigation__item"><a href="#">Contact</a></li>
 				</ul>
 			</nav>
+			<div role="button" class="wrapper-menu">
+				<div class="line-menu half start"></div>
+				<div class="line-menu"></div>
+				<div class="line-menu half end"></div>
+			</div>
 		</div>
+		<nav class="mobile-nav">
+			<ul class="mobile-nav__list">
+				<li class="mobile-nav__item"><a href="#">Home</a></li>
+				<li class="mobile-nav__item"><a href="#">Works</a></li>
+				<li class="mobile-nav__item"><a href="#">Industries</a></li>
+				<li class="mobile-nav__item"><a href="#">Services</a></li>
+				<li class="mobile-nav__item"><a href="#">News</a></li>
+				<li class="mobile-nav__item"><a href="#">Who we are</a></li>
+				<li class="mobile-nav__item"><a href="#">Contact</a></li>
+			</ul>
+		</nav>
 	</header>
+	<button class="scroll-top">
+		<i class="fas fa-arrow-up"></i>
+	</button>
 	<main>
 		<section class="welcome-section">
 			<div class="page__container">
@@ -77,6 +96,7 @@
 				</ul>
 			</div>
 		</section>
+	
 		<section class="blog blog_padding">
 			<div class="page__container blog-container">
 				<div class="content content_dark content_center content_margin-bottom">
@@ -140,7 +160,7 @@
 				<button class="load-more cross">Load more</button>
 			</div>
 		</section>
-	</main>
+	</main> 
 	<footer class="footer">
 		<div class="page__container">
 			<ul class="footer__info">
@@ -173,6 +193,7 @@
 			</ul>
 		</div>
 	</footer>
+<script src="js/script.js"></script>
 </body>
 
 </html>
